added game function in rps.js

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors Console Game</h1>
+    <p>This game works in the developer tools console. Right click the page and choose inspect. Then refresh the page</p>
     <script src="rps.js"></script>
 </body>
 </html>
