--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors Console Game</h1>
+    
+    <div> <H1>Let's play a game of ROCK PAPER SCISSORS</h1></div>
+        <div><strong>How is it played?</strong>
+        <p>Yow will play against me (The computer) Ha!<br>Can you win?</p>
+    <p>If I chose a more powerful object, I win. If yours is more powerful, you win. Here are the rules:
+        <ul>
+            <li>Rock is more powerful than scissors (because it can bend and break Scissors)</li>
+            <l1>Scissors is more powerful than Paper (because - know)</l1>
+            <li>Paper surprisingly wins over Rock (because a paper can cover a rock)</li>
+        </ul>
+
+        So here's the summary:
+        <table>
+            <tr><td>Rock beats Scissors</td></tr>
+            <tr><td>Scissors beats paper</td></tr>
+            <tr><td>Paper beats Rock</td></tr>
+        </table>
+
+    </p></div>
+
     <p>This game works in the developer tools console. Right click the page and choose inspect. Then refresh the page</p>
     <script src="rps.js"></script>
 </body>
