add hover effect, rewriting the game() function

--- a/index.htm
+++ b/index.htm
@@ -31,13 +31,13 @@
     <!----------------------Gamepad------------------------------>
     <div class="gamepad">
         <div class="rock">
-            <img class="images" src="images/rock.png" onclick="game('ROCK')">
+            <img class="images" src="images/rock.png">
         </div>
         <div class="scissors">
-            <img class="images" src="images/scissors.png" onclick="game('SCISSORS')">
+            <img class="images" src="images/scissors.png">
         </div>
         <div class="paper">
-            <img class="images" src="images/paper.png"onclick="game('PAPER')">
+            <img class="images" src="images/paper.png">
         </div>
     </div>
     <!------------------result Display----------------------------->
