reload button function tweaking

--- a/index.htm
+++ b/index.htm
@@ -46,9 +46,9 @@
 
     <!--------------------Trophy Presentation-------------------------->
     <div class="trophy">
-        test
+        
     </div>
-    <div><button>Play Again</button></div>
+    <div class="reloadButton"></div>
 
     <script src="rps.js"></script>
 </body>
