adding a heading margin

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <body>
     
     <!--------------Title------------------------------------>
-    <div>
+    <div class="heading">
         <H1>Let's play a game of ROCK PAPER SCISSORS</h1>
     </div>
     <hr>
