Added showChoices to make the computer choice more apparent, other cosmetic changes

--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,10 @@
             <img class="images" src="images/paper.png">
         </div>
     </div>
+
+    <div class="showChoices">
+
+    </div>
     <!------------------result Display----------------------------->
     <div class="scoreBoard"></div>
 
